# ZioTestApp

./: .gitignore  CMakeLists.txt  Makefile  MasterOfZio  README.md  ReleaseNote.md  S90MasterOfZio  arm-linux.mk  cmake_install.cmake  cross-linux.mk  em-500.mk  epcm3568.mk  msvc_gen.bat  start.sh  zmc-600e.mk  zws_sdk.pri
3rd/jsmn/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  jsmn_wrapper.c  jsmn_wrapper.h
3rd/jsmn/example/: jsondump.c  nested_obj.c
3rd/libuv/: .gitignore  .mailmap  AUTHORS  CONTRIBUTING.md  ChangeLog  MAINTAINERS.md  Makefile.am  Makefile.mingw  SUPPORTED_PLATFORMS.md  android-configure  appveyor.yml  checksparse.sh  common.gypi  configure.ac  libuv.pc.in  uv.gyp
3rd/libuv/.github/: ISSUE_TEMPLATE.md
3rd/libuv/include/: uv-version.h  uv-win.h  uv.h
3rd/libuv/test/: run-tests.c  runner-unix.c  runner-win.c  runner.c  task.h  test-emfile.c  test-env-vars.c  test-error.c  test-fork.c  test-fs-copyfile.c  test-fs-event.c  test-fs.c  test-gethostname.c  test-ip6-addr.c  test-ipc-send-recv.c  test-ipc.c  test-list.h  test-loop-close.c  test-ping-pong.c  test-pipe-getsockname.c  test-pipe-set-fchmod.c  test-platform-output.c  test-poll-close-doesnt-corrupt-stack.c  test-poll-oob.c  test-poll.c  test-process-title.c  test-signal-multiple-loops.c  test-signal.c  test-spawn.c  test-tcp-close-accept.c  test-tcp-oob.c  test-tcp-open.c  test-tcp-write-queue-order.c  test-thread.c  test-threadpool-cancel.c  test-tmpdir.c  test-tty.c  test-udp-alloc-cb-fail.c  test-udp-ipv6.c  test-udp-multicast-join6.c  (+3 more)
3rd/mbedtls/: CMakeLists.txt  ChangeLog  Makefile  tags
3rd/serial/: CMakeLists.txt
app/: CMakeLists.txt  Makefile  app.c  cmake_install.cmake
app/application/: CMakeLists.txt  Makefile  app_zmcio.c  cmake_install.cmake  cmd_process.c  cmd_process.h  data_log.c  data_log.h  main.c  modbus_tcp_server.h  test.c
app/database/: CMakeLists.txt  Makefile  cmake_install.cmake  database.c  database.h  test.db  test_order.c  test_order.h  upload_data.c  upload_data.h
app/ecat_master/: CMakeLists.txt  Makefile  cmake_install.cmake  ecat_master.c  ecat_master.h  eeprom.c
app/include/ecat/: zecm_zh.h
app/include/modbus/: modbus-rtu.h
app/lib/: libmodbus.la
app/lib/sqlite3/lib/: libsqlite3.so.3.50.1
app/lib/sqlite3/lib/pkgconfig/: sqlite3.pc
app/upgrade/: CMakeLists.txt  Makefile  cmake_install.cmake
app/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  log.c  log.h  ticks.c
application/: CMakeLists.txt  app_zmcio.h  cmd_process.c  cmd_process.h  data_log.c  data_log.h  main.h  modbus_tcp_server.c
config/eni/: MasterOfZio.xml
config/esi/: ZIOC-E0008AU.xml
demos/: Makefile  README.md  cmake_install.cmake
demos/src/: .gitignore  CMakeLists.txt  Makefile  appuser_expl.c  cmake_install.cmake  commands.c  commands.h  device.c  device.h  device_consts.h  device_expl.c  download_firmware_expl.c  download_package_expl.c  errors.c  errors.h  gateway_expl.c  http_transfer_chunk.c  log.h  test.c  upload_file_expl.c  warnings.c  warnings.h
demos/src/Home_ES/: device_Home_ES.c  device_Home_ES.h  device_expl_Home_ES.c
demos/src/Industry_ES/: commands_Industry_ES.c  commands_Industry_ES.h  device_Industry_ES.c  device_Industry_ES.h  device_expl_Industry_ES.c
demos_qt/: device_example.pro  device_example_Home_ES.pro  device_example_Industry_ES.pro  download_firmware_example.pro  download_package_example.pro  gateway_example.pro  upload_file_example.pro
ecat_master/: CMakeLists.txt  eeprom.c  eeprom.h  slave.c  slave.h
include/ecat/: zecm_ex.h
lib/: libmodbus.so.5.1.0
upgrade/: CMakeLists.txt  app_upgrade.c  app_upgrade.h
utils/: CMakeLists.txt  log.c  ticks.h
vs_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mqttproto.sln
vs_build/demos/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
vs_build/zws_sdk/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
zws_sdk/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
zws_sdk/network/: CMakeLists.txt  Makefile  cmake_install.cmake
zws_sdk/network/include/: network_interface.h  threads_interface.h  timer_interface.h  zlg_iot_config.h  zlg_iot_error.h  zlg_iot_http_auth_client.h  zlg_iot_http_client.h  zlg_iot_http_firmware_client.h  zlg_iot_http_package_client.h  zlg_iot_http_package_client.h.bak  zlg_iot_http_upload_file_client.h  zlg_iot_log.h  zlg_iot_mqtt_client.h  zlg_iot_mqtt_client_common_internal.h  zlg_iot_mqtt_client_interface.h  zlg_iot_version.h
zws_sdk/network/platform/aworks/common/: aworks_platform_common.h  timer_platform.h  timer_wrapper.c
zws_sdk/network/platform/aworks/mbedtls/: network_mbedtls_platform.h  network_mbedtls_wrapper.c
zws_sdk/network/platform/aworks/pthread/: threads_pthread_wrapper.c
zws_sdk/network/platform/aworks/socket/: network_socket_platform.h  network_socket_wrapper.c
zws_sdk/network/platform/linux/common/: timer.c  timer_platform.h
zws_sdk/network/platform/linux/mbedtls/: network_mbedtls_wrapper.c
zws_sdk/network/platform/linux/pthread/: threads_platform.h
zws_sdk/network/platform/linux/socket/: network_platform.h  network_socket_wrapper.c
zws_sdk/network/platform/windows/common/: timer.c  timer_platform.h  win_timer_util.h
zws_sdk/network/platform/windows/mbedtls/: network_mbedtls_wrapper.c
zws_sdk/network/platform/windows/pthread/: thread_platform.h  threads_winthread_wrapper.c
zws_sdk/network/platform/windows/socket/: network_platform.h  network_socket_wrapper.c
zws_sdk/network/src/: zlg_iot_http_auth_client.c  zlg_iot_http_client.c  zlg_iot_http_firmware_client.c  zlg_iot_http_package_client.c  zlg_iot_http_upload_file_client.c  zlg_iot_mqtt_client.c  zlg_iot_mqtt_client_common_internal.c  zlg_iot_mqtt_client_connect.c  zlg_iot_mqtt_client_publish.c  zlg_iot_mqtt_client_subscribe.c  zlg_iot_mqtt_client_unsubscribe.c  zlg_iot_mqtt_client_yield.c
zws_sdk/network/tools/: http_auth.c  http_download.c  mqtt_demo.c
zws_sdk/protocol/: app.md  protocol.md
(+116 files in other folders)
